# rusty-sandbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  docker-compose.dev.yml  readme.MD
src/: apis.rs  app.rs  constants.rs  main.rs  sandbox.rs
src/static/: index.html
