[package]
name = "rusty_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.23.0" }
seccomp = "0.1"
libc = "0.2"
# web api related
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
